# aoc2021

./: .gitignore  CMakeLists.txt  Makefile  README.md  Untitled Diagram.drawio
exercises/: CMakeLists.txt
exercises/1/: README.md  main.cpp
exercises/2/: README.md  main.cpp  main1.cpp
exercises/3/: CMakeLists.txt  README.md  bit_count_tree.cpp  bit_count_tree.h  main.cpp  main1.cpp
libs/utils/: CMakeLists.txt  file_text.h
